# kyoto

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: fuzzer_compile.yml  run_tests.yml
cmake/: SetupANTLR.cmake  SetupBoost.cmake  SetupGTest.cmake  SetupLLVM.cmake
cmake/antlr/: ExternalAntlr4Cpp.cmake  antlr4-runtime.cmake.in
docs/: anon_funcs.md  overloading.md
editors/vscode/kyoto/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
editors/vscode/kyoto/syntaxes/: kyoto.tmLanguage.json
examples/: dyn_arr.kyo  ex.kyo  factorial.kyo  fib.kyo  fib_rec.kyo  fibo_rec.kyo  generic.kyo  huffman.kyo  input.kyo  insertion_sort.kyo  min_heap.kyo  new.kyo  quicksort.kyo  quicksort_slice.kyo  swap.kyo  vec.kyo
fuzzer/: .gitignore  Cargo.toml  README.md
fuzzer/src/: ast.rs  generator.rs  harness.rs  lexer.rs  lib.rs  main.rs  parser.rs
grammar/: KyotoLexer.g4  KyotoParser.g4
include/kyoto/: ClassMetadata.h  KType.h  ModuleCompiler.h  SymbolTable.h  Type.h  TypeResolver.h  Visitor.h
include/kyoto/AST/: ASTBinaryArithNode.h  ASTBinaryNode.h  ASTNode.h  ClassDefinitionNode.h  ControlFlowNodes.h  DeclarationNodes.h  ExpressionNode.h  ForStatementNode.h  FreeStatementNode.h  FunctionCall.h  IfStatementNode.h  NumberNode.h  ReturnStatement.h  StringLiteralNode.h  TypeAliasNode.h
include/kyoto/AST/Expressions/: AnonymousFunctionNode.h  ArrayIndexNode.h  ArrayNode.h  AssignmentNode.h  BinaryNode.h  CastNode.h  ExpressionNode.h  FunctionCallNode.h  IdentifierNode.h  MatchNode.h  MemberAccessNode.h  MethodCallNode.h  NewArrayNode.h  NewNode.h  NumberNode.h  SizeofNode.h  SliceNode.h  StringLiteralNode.h  UnaryNode.h
include/kyoto/Analysis/: FunctionTermination.h
include/kyoto/Resolution/: AnalysisVisitor.h  ClassIdentifierVisitor.h  ConstructorIdentifierVisitor.h  ConstructorResolution.h  FunctionIdentifierVisitor.h
include/kyoto/utils/: File.h  Test.h
scripts/: fmt.sh  iwyu.py
src/: KType.cpp  ModuleCompiler.cpp  SymbolTable.cpp  Type.cpp  TypeResolver.cpp  Visitor.cpp
src/AST/: ASTBinaryArithNode.cpp  ASTBinaryCmpNode.cpp  ASTBinaryLogicalNode.cpp  ASTNode.cpp  ClassDefinitionNode.cpp  ControlFlowNodes.cpp  DeclarationNodes.cpp  ExpressionNode.cpp  ForStatementNode.cpp  FreeStatementNode.cpp  FunctionCall.cpp  IfStatementNode.cpp  NumberNode.cpp  ReturnStatement.cpp  StringLiteralNode.cpp  TypeAliasNode.cpp
src/AST/Expressions/: AnonymousFunctionNode.cpp  ArrayIndexNode.cpp  ArrayNode.cpp  AssignmentNode.cpp  BinaryArithNode.cpp  BinaryCmpNode.cpp  BinaryLogicalNode.cpp  CastNode.cpp  ExpressionNode.cpp  FunctionCallNode.cpp  IdentifierNode.cpp  MatchNode.cpp  MemberAccessNode.cpp  MethodCallNode.cpp  NewArrayNode.cpp  NewNode.cpp  NumberNode.cpp  SizeofNode.cpp  SliceNode.cpp  StringLiteralNode.cpp  UnaryNode.cpp
src/Analysis/: FunctionTermination.cpp
src/Resolution/: ClassIdentifierVisitor.cpp  ConstructorIdentifierVisitor.cpp  ConstructorResolution.cpp  FunctionIdentifierVisitor.cpp
src/utils/: File.cpp
test/: TestArrays.cpp  TestAssignment.cpp  TestCast.cpp  TestCharArrayIndex.cpp  TestClass.cpp  TestDriver.cpp  TestFor.cpp  TestFunction.cpp  TestFunctionTermination.cpp  TestGenerics.cpp  TestIfStatement.cpp  TestImport.cpp  TestLogical.cpp  TestMatch.cpp  TestNew.cpp  TestPointers.cpp  TestReturn.cpp  TestScope.cpp  TestSizeof.cpp  TestSlices.cpp  TestTypeAlias.cpp  VariableDeclaration.cpp
test/code/: arrays.kyo  assign.kyo  cast.kyo  char_array_index.kyo  class.kyo  for.kyo  func.kyo  func_term.kyo  generics.kyo  if.kyo  logical.kyo  match.kyo  modules.kyo  new.kyo  ptr.kyo  return.kyo  scope.kyo  sizeof.kyo  slices.kyo  typealias.kyo
test/code/mods/: a.kyo  b.kyo  outer.kyo  overloads.kyo  types.kyo
test/code/mods/nested/: calc.kyo
